Fixed an issue with the img src.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
 
     <header>
-        <img src="/images/Wrist-Werks-Logo.png" class="hero-logo">
+        <img src="../images/Wrist-Werks-Logo.png" class="hero-logo">
         <h1>WRIST WERKS</h1>
         <p class="tagline">Veteran-Made Paracord Bracelets & Keychains</p>
         <a href="#shop" class="btn">View Current Stock</a>
